tests/dataset/tpc-ds/compiler/go/q89.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq893025457125/001/main.go:77:2: syntax error: unexpected name at64 after top level declaration
